--- a/index.html
+++ b/index.html
@@ -510,7 +510,47 @@
 		
 	</div>
 	<!-- End Portfolio Page -->
-
+	<div id="parallax5">
+	    <div class="bg5"></div>
+	    <div class="pattern"></div>
+		<div class="container">
+			<div class="vertical-text">
+				<h1 style="color:#FFF;border-top:1px solid #FFF">INNOVAZIONE CONTINUA: DOMOTICA E LI-FI</h1>
+			</div>
+		</div>
+	</div>
+	
+	<div id="lifi" class="page">
+		<div class="container">
+			<div class="sixteen columns">
+				<div class="one-text">
+					<p>Da noi trovi adesso l’illuminazione del futuro. La domotica applicata all’illuminotecnica fornisce tecnologie intelligenti capaci di sorprendere e migliorare la qualità della nostra vita. Il li-fi, ad esempio, rappresenta un’innovazione dalle enormi potenzialità.</p>
+					<p>Il li-fi rappresenta il corrispettivo ottico del wi-fi. In sostanza la luce visibile viene utilizzata per trasferire dati, rendendo la tua fonte luminosa un dispositivo in grado di fornire connettività ai tuoi dispositivi digitali. Accendi la luce e sei connesso, semplice no?</p>
+				</div>
+			</div>  
+		</div>
+	</div>
+	
+	<div id="parallax6">
+	    <div class="bg6"></div>
+	    <div class="pattern"></div>
+		<div class="container">
+			<div class="vertical-text">
+				<h1 style="color:#FFF;border-top:1px solid #FFF">TECNOLOGIE PER IL RISPARMIO ENERGETICO</h1>
+			</div>
+		</div>
+	</div>
+	
+	<div id="greenenergy" class="page">
+		<div class="container">
+			<div class="sixteen columns">
+				<div class="one-text">
+					<p>I dispositivi di gestione e di controllo sono in grado di eliminare gli sprechi energetici e di generare comportamenti tanto semplici quanto virtuosi. Noi conosciamo queste tecnologie e da sempre le utilizziamo per progettare sistemi d’illuminazione capaci di aumentare l’efficienza dell’impianto e di abbassare la bolletta della luce</p>
+					<p>Ma il vantaggio economico non è l’unico obiettivo che perseguiamo con efficacia. Creare risparmio energetico è il nostro modo di testimoniare la grande attenzione verso la natura che ci accoglie. Perché la salvaguardia dell’ambiente non è una scelta, è una necessità.</p>
+				</div>
+			</div>  
+		</div>
+	</div>
 	
 	
 	<!-- Start Contact Page -->
@@ -570,10 +610,6 @@
 				
 			</div>
 		</div>
-	
-		<div class="copyright">
-			<p>© 2012 Kutcher studio. <a href="http://themes.tvda.eu/">Kutcher Template</a> by <a href="http://themes.tvda.eu/">TVDA</a>.</p>
-		</div>		
 	
 	</div>
 	<!-- End Contact Page -->
