--- a/index.html
+++ b/index.html
@@ -258,6 +258,28 @@
 			</div>
 		</div>
 	</div>
+	
+	<div id="services-detail" class="page">
+		<div class="container">
+			<div class="three columns">
+				<div style="width:100%;border:10px solid #000;border-radius:100%;">
+					<div style="padding:20px;">
+						<img src="images/icons/icona_01black.png" alt="" style="width:100%;">
+					</div>
+				</div>
+			</div>
+			<div class="eleven columns">
+				<h1 style="margin-top:35px;padding-left:30px">SOPRALLUOGO</h1>
+			</div>
+		</div>
+		<div class="detail" style="background-color:#DDD">
+			<div class="container">
+				<div class="sixteen columns">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, earum, ad, aperiam eveniet odio dolorem ea eius rem dolores provident error reprehenderit corporis labore ipsum molestias in quam sapiente cum!
+				</div>
+			</div>
+		</div>
+	</div>
 	<!-- End Third Parallax Background (Clients) -->
 	<div id="parallax4">
 	    <div class="bg4"></div>
@@ -285,20 +307,14 @@
 	<div id="portfolio" class="page">
 	
 		<div class="container">
-		
-			<div class="sixteen columns">
-				<h1>Portfolio</h1>
-					<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac augue at erat <a href="#homepage">hendrerit dictum</a>. Praesent porta, purus eget sagittis imperdiet, nulla mi ullamcorper metus, id hendrerit metus diam vitae est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-					<hr>
-			</div>
 			
 			<!-- Start Filters -->
                 <ul class="option-set" data-option-key="filter">
                 	<li><i class="icon-reorder"></i></li>
 			    	<li><a class="selected" href="#filter" data-option-value="*"><span></span>All projects</a></li>
-					<li><a href="#filter" data-option-value=".photography"><span></span>Photography</a></li>
+					<!--<li><a href="#filter" data-option-value=".photography"><span></span>Photography</a></li>
 					<li><a href="#filter" data-option-value=".video"><span></span>Video</a></li>
-					<li><a href="#filter" data-option-value=".design"><span></span>Design</a></li>
+					<li><a href="#filter" data-option-value=".design"><span></span>Design</a></li>-->
 		    	</ul>
 			<!-- End Filters -->
 			
