--- a/index.html
+++ b/index.html
@@ -260,22 +260,45 @@
 	</div>
 	
 	<div id="services-detail" class="page">
-		<div class="container">
-			<div class="three columns">
-				<div style="width:100%;border:10px solid #000;border-radius:100%;">
-					<div style="padding:20px;">
-						<img src="images/icons/icona_01black.png" alt="" style="width:100%;">
+		<div class="claim">
+			<div class="container">
+				<div class="three columns">
+					<div class="bigicon">
+						<div class="inner">
+							<img src="images/icons/icona_01black.png" alt="">
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="eleven columns">
-				<h1 style="margin-top:35px;padding-left:30px">SOPRALLUOGO</h1>
+				<div class="eleven columns">
+					<h1>SOPRALLUOGO</h1>
+				</div>
 			</div>
 		</div>
-		<div class="detail" style="background-color:#DDD">
+		<div class="detail">
 			<div class="container">
 				<div class="sixteen columns">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, earum, ad, aperiam eveniet odio dolorem ea eius rem dolores provident error reprehenderit corporis labore ipsum molestias in quam sapiente cum!
+					<div class="container-icons">
+						<div class="icons">
+							<img src="images/icons/icona_05.png" alt="" data-load="postvendita">
+						</div>
+						<div class="icons">
+							<img src="images/icons/icona_04.png" alt="" data-load="vendita">
+						</div>
+						<div class="icons">
+							<img src="images/icons/icona_03.png" alt="" data-load="progettazione">
+						</div>						
+						<div class="icons">
+							<img src="images/icons/icona_02.png" alt="" data-load="analisi">
+						</div>
+						<div class="icons">
+							<img src="images/icons/icona_01.png" alt="" data-load="sopralluogo">
+						</div>
+						<div class="clearfix"></div>
+					</div>
+					<div class="text">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, earum, ad, aperiam eveniet odio dolorem ea eius rem dolores provident error reprehenderit corporis labore ipsum molestias in quam sapiente cum!</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, ducimus, doloribus, labore veritatis rem alias magni laudantium accusamus expedita nisi similique quisquam. Beatae consequatur hic praesentium quas ad vero saepe!</p>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -630,6 +653,60 @@
 	</div>
 	<!-- End Contact Page -->
 	
+	<div class="hidden sections">
+		<div data-toggle="sopralluogo">
+			<img class="bigimg" alt="" src="images/icons/icona_01black.png">
+			<img class="smallimg" alt="" src="images/icons/icona_01.png">
+			<img class="smallimghover" alt="" src="images/icons/icona_01black.png">
+			<h1>SOPRALLUOGO</h1>
+			<div class="text">
+				<p>
+					Potrebbe apparire inutile soffermarsi sul sopralluogo, un momento da molti considerato scontato. In realtà è fondamentale. È proprio durante il sopralluogo
+					che si creano le basi per una corretta progettazione illuminotecnica, ascoltando nel dettaglio le tue specifiche esigenze e verificando con attenzione le
+					caratteristiche tecniche dello spazio.
+				</p>
+				<p>
+					Nella nostra metaforica corsa ciclistica, il sopralluogo rappresenta una vera e propria “cronometro”, un tipo di tappa in cui ogni minimo errore viene punito
+					con una grande distacco dal vincitore. Ogni piccola disattenzione durante il sopralluogo può provocare dei disguidi nelle fasi successive. Per questo
+					affrontiamo questo momento curando ogni minimo dettaglio.
+				</p>
+			</div>
+		</div>
+		<div data-toggle="analisi">
+			<img class="bigimg" alt="" src="images/icons/icona_02black.png">
+			<h1>ANALISI E CONFRONTO</h1>
+			<div class="text">
+				<p>Cominciano le prime salite. In questa “tappa” caratterizzata da salite semplici ma continue, il lavoro di squadra è fondamentale per controllare eventuali “fughe”. Nell'analisi occorre determinare un equilibrio tra i tuoi obiettivi e tutte le soluzioni progettuali possibili, dall'illuminazione più tradizionale alla domotica più all'avanguardia, come la tecnologia li-fi per esempio. </p>
+				<p>Considerare solo le esigenze potrebbe escludere a priori soluzioni interessanti, mentre un eccessivo allontanamento dagli obiettivi potrebbe favorire la scelta di tecnologie non adatte. Per questo offriamo la nostra capacità consulenziale per stabilire insieme a te le caratteristiche progettuali più idonee.</p>
+			</div>
+		</div>
+		<div data-toggle="progettazione">
+			<img class="bigimg" alt="" src="images/icons/icona_03black.png">
+			<h1>PROGETTAZIONE ILLUMINOTECNICA</h1>
+			<div class="text">
+				<p>Arriva l'alta montagna, la tappa più impegnativa. In questa fase concentriamo più servizi. Oltre alla realizzazione del progetto d'illuminazione, il nostro metodo di progettazione illuminotecnica prevede l'analisi e la selezione delle forniture più idonee. Grazie al network di produttori creato in questi anni di attività, possiamo fornirti prodotti di alta qualità e professionalità ricche di esperienza, centrando due obiettivi fondamentali: contenimento dei costi e qualità di realizzazione. </p>
+				<p>In questa fase di progettazione illuminotecnica occorre effettuare le scelte determinanti per il risultato finale.</p>
+			</div>
+		</div>
+		<div data-toggle="vendita">
+			<img class="bigimg" alt="" src="images/icons/icona_04black.png">
+			<h1>VENDITA</h1>
+			<div class="text">
+				<p>Per vincere una “volata” il velocista deve trovarsi nella posizione corretta al termine della corsa. Allo stesso modo concepiamo le fasi precedenti come servizi propedeutici alla fase decisiva di ogni progetto: l'acquisto. In tal senso operiamo per offrirti una selezione scrupolosa delle lampade, dei materiali, dei professionisti e armonizziamo le esigenze progettuali con il necessario contenimento dei costi. </p>
+				<p>Un buon rapporto qualità-prezzo non si misura solo in termini monetari, occorre considerare anche il tempo risparmiato. Con noi ottieni un progetto illuminotecnico completo e ti liberi da incombenze faticose, come cercare, contattare e gestire fornitori diversi. Infine, solo chi conosce e integra l'intera filiera di settore può massimizzare l'efficacia del tuo budget. E, in questo, la nostra esperienza può trasformarsi nella tua convenienza.</p>
+			</div>
+		</div>
+		<div data-toggle="postvendita">
+			<img class="bigimg" alt="" src="images/icons/icona_05black.png">
+			<h1>POST VENDITA</h1>
+			<div class="text">
+				<p>Vincere è difficile, ma confermarsi è ancora più complesso. L'applicazione finale, infatti, non conclude il nostro rapporto. Per salvaguardare l'efficienza e le performance del sistema d'illuminazione da noi progettato, offriamo i nostri servizi di assistenza tecnica e manutenzione. </p>
+
+				<p>Tempestivi e risolutivi, i nostri tecnici sono sempre a tua disposizione per eliminare le eventuali problematiche di un impianto che, in quanto progettato, conoscono alla perfezione.</p>
+			</div>
+		</div>
+	</div>
+	
 	<!-- JavaScripts -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 	<script src="js/jquery.easing.min.js"></script>
@@ -658,6 +735,26 @@
 	
 	<script>
 		$(function(){
+			$('[data-load]').click(function()
+			{
+				$('[data-load]').each(function()
+				{
+					$(this).parent().find('.hidden').removeClass('hidden');
+					$(this).parent().find('.hover').remove();
+				});
+				var attr = $(this).attr('data-load');
+				var section = $('.sections [data-toggle='+attr+']');
+				var h1 = $(section).find('h1').html();
+				var text = $(section).find('.text').html();
+				var bigimgsrc = $(section).find('.bigimg').attr('src');
+				
+				$('#services-detail').find('h1').html(h1);
+				$('#services-detail').find('.text').html(text);
+				$('#services-detail').find('.bigicon img').attr('src',bigimgsrc);
+				$(this).addClass('hidden');
+				$(this).parent().append('<img src="'+bigimgsrc+'" alt="" class="hover">');
+			});
+			
 			$('.item').show();
 			var $container = $('#portfolio_items');
 			$container.isotope({
