Aggiunto il logo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		
 		<div class="container">
 			<div class="sixteen columns">
-				<!--<img alt="" class="logo" src="images/logo.png" />-->
+				<img alt="" class="logo" src="images/logo_white.png" />
 			</div>
 			
 			<div class="slider-text">
